@@ -7,6 +7,8 @@
 	* win/tkWinColor.c
 	* win/tkWinPixmap.c
 	* win/tkWinScrlbr.c
+	* win/tkWinWindow.c
+	* win/tkWinWm.c
 	* win/ttkWinMonitor.c
 	* win/tkWin32Dll.c:   Make assembler code compile in Win64 with gcc.
 
